Fix scrollbar issue on home page

--- a/home.css
+++ b/home.css
@@ -39,6 +39,17 @@
 }
 
 html {
-    overflow-y: hidden;
+    overflow-y: scroll;
     background-color: #FFFAEB;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
